fix table scroll z-index

--- a/src/sass/components/table/_styles.scss
+++ b/src/sass/components/table/_styles.scss
@@ -24,7 +24,7 @@
   }
 
   .ScrollTrack {
-    z-index: 101 !important;
+    z-index: 99 !important;
   }
 
   .TableHead {
